[FEATURE] Refactor entity and files